--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,9 @@
 machine:
+  java:
+    version: oraclejdk8
   services:
     - docker
 
 dependencies:
   override:
-    - gradle build --debug
+    - gradle build
