Rename project from url-check-monitor to url-check-auditor

--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 # APPLICATION SETTINGS
 
-com.codeaim.urlcheck.scheduler.name=UK
-com.codeaim.urlcheck.scheduler.isClustered=false
+#com.codeaim.urlcheck.auditor.name=UK
+#com.codeaim.urlcheck.auditor.isClustered=false
