Adding postgres driver. Adding jdbc property hints. Adding property defaults.

--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,10 @@
 
 #com.codeaim.urlcheck.auditor.name=UK
 #com.codeaim.urlcheck.auditor.isClustered=false
+
+# DATABASE SETTINGS
+
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=
