--- a/build.gradle
+++ b/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     compile "org.apache.httpcomponents:httpclient:4.5"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "com.h2database:h2"
+    compile "org.postgresql:postgresql:9.3-1100-jdbc4"
 }
 
