Adding postgres driver. Adding jdbc property hints. Adding property defaults.

--- a/application.properties
+++ b/application.properties
@@ -3,6 +3,10 @@
 #com.codeaim.urlcheck.auditor.name=UK
 #com.codeaim.urlcheck.auditor.isClustered=false
 
+# SERVER SETTINGS
+
+server.port=6661
+
 # DATABASE SETTINGS
 
 #spring.datasource.url=
