--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ jar {
 
 dependencies {
     compile "org.apache.httpcomponents:httpclient:4.5"
+    compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "com.h2database:h2"
     compile "org.postgresql:postgresql:9.3-1100-jdbc4"
 }
