--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ buildscript {
 
 apply plugin: "java"
 apply plugin: "idea"
-apply plugin: 'spring-boot'
+apply plugin: "spring-boot"
+
 
 springBoot {
     executable = true
@@ -40,9 +41,10 @@ jar {
 }
 
 dependencies {
-    compile "org.apache.httpcomponents:httpclient:4.5"
+    compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile "org.springframework.boot:spring-boot-starter-hateoas"
     compile "com.h2database:h2"
     compile "org.postgresql:postgresql:9.3-1100-jdbc4"
 }
-
