Adding actuator endpoint

--- a/application.properties
+++ b/application.properties
@@ -5,11 +5,15 @@
 
 # SERVER SETTINGS
 
-server.port=6661
+#server.port=6661
 
 # DATABASE SETTINGS
 
 #spring.datasource.url=
-#spring.datasource.username=
+#spring.datasource.username=postgres
 #spring.datasource.password=
-#spring.jpa.hibernate.ddl-auto=
+#spring.jpa.hibernate.ddl-auto=update
+
+# ACTUATOR SETTINGS
+
+endpoints.actuator.path=/
