Reworked seeding. Fixed url request error handling.

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 # APPLICATION SETTINGS
 
-#com.codeaim.urlcheck.auditor.name=UK
+#com.codeaim.urlcheck.auditor.name=London
 #com.codeaim.urlcheck.auditor.isClustered=false
 
 # SERVER SETTINGS
