Fixed monitor version. Made use of batch save during election.

--- a/application.properties
+++ b/application.properties
@@ -2,12 +2,12 @@
 
 #com.codeaim.urlcheck.auditor.name=London
 #com.codeaim.urlcheck.auditor.isClustered=false
+#com.codeaim.urlcheck.auditor.task.statusAcquisition.electionSize=10
 #com.codeaim.urlcheck.auditor.monitorEventExistenceDuration=P7D
-
 
 # SERVER SETTINGS
 
-server.port=6661
+#server.port=6661
 
 # DATABASE SETTINGS
 
