--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,9 @@
 # APPLICATION SETTINGS
 
-#com.codeaim.urlcheck.auditor.name=London
-#com.codeaim.urlcheck.auditor.isClustered=false
-#com.codeaim.urlcheck.auditor.task.statusAcquisition.electionSize=10
-#com.codeaim.urlcheck.auditor.monitorEventExistenceDuration=P7D
+#com.codeaim.urlcheck.probe.name=London
+#com.codeaim.urlcheck.probe.isClustered=false
+#com.codeaim.urlcheck.probe.task.checkTask.electionSize=10
+#com.codeaim.urlcheck.probe.resultExistenceDuration=P7D
 
 # SERVER SETTINGS
 
