--- a/build.gradle
+++ b/build.gradle
@@ -3,34 +3,20 @@ repositories {
     maven {
         url  "http://dl.bintray.com/gdownes/codeaim"
     }
-    maven {
-        url "http://repo.spring.io/snapshot"
-    }
-    maven {
-        url "http://repo.spring.io/milestone"
-    }
-
 }
 
 buildscript {
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.0.BUILD-SNAPSHOT"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.2.RELEASE"
     }
     repositories {
         mavenCentral()
-        maven {
-            url "http://repo.spring.io/snapshot"
-        }
-        maven {
-            url "http://repo.spring.io/milestone"
-        }
     }
 }
 
 apply plugin: "java"
 apply plugin: "idea"
 apply plugin: "spring-boot"
-
 
 springBoot {
     executable = true
@@ -40,6 +26,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 version = "0.0.1"
+group   = 'com.codeaim'
 
 jar {
     baseName = 'url-check-probe'
