--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,6 @@
 machine:
   java:
     version: oraclejdk8
-  services:
-    - docker
 
 dependencies:
   override:
@@ -13,9 +11,7 @@ test:
     - gradle test
 
 deployment:
-  hub:
+  staging:
     branch: master
-    commands:
-          - docker build -t codeaim/url-check-probe .
-          - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-          - docker push codeaim/url-check-probe
+    heroku:
+      appname: urlcheck-probe-01
