--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile "org.postgresql:postgresql:9.3-1100-jdbc4"
     compile "org.springframework.boot:spring-boot-devtools"
     compile "com.codeaim:url-check-common:0.0.13"
+    compile "net.logstash.logback:logstash-logback-encoder:4.6"
 }
