--- a/application.properties
+++ b/application.properties
@@ -10,11 +10,9 @@
 #server.port=6661
 
 # DATABASE SETTINGS
-
-#spring.datasource.url=
-#spring.datasource.username=postgres
-#spring.datasource.password=
+#spring.datasource.url=jdbc:postgresql://ec2-79-125-120-89.eu-west-1.compute.amazonaws.com:5432/dpfp2ijeagg0n?user=afkucyyyowfiry&password=HocNAZrn7uIlke0sx41ct3z09B&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
 #spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driverClassName=org.postgresql.Driver
 
 # ACTUATOR SETTINGS
 
