--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 repositories {
+    mavenLocal()
     mavenCentral()
     maven {
         url  "http://dl.bintray.com/gdownes/codeaim"
@@ -10,6 +11,7 @@ buildscript {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.2.RELEASE"
     }
     repositories {
+        mavenLocal()
         mavenCentral()
     }
 }
@@ -38,8 +40,8 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-hateoas"
     compile "com.h2database:h2"
-    compile "org.postgresql:postgresql:9.3-1100-jdbc4"
+    compile "org.postgresql:postgresql:9.4.1208"
     compile "org.springframework.boot:spring-boot-devtools"
-    compile "com.codeaim:url-check-common:0.0.13"
+    compile "com.codeaim:url-check-common:0.0.16"
     compile "net.logstash.logback:logstash-logback-encoder:4.6"
 }
