Making papertrail configurable

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,7 @@
 # APPLICATION SETTINGS
 
+spring.application.name="urlcheck-probe"
+
 #com.codeaim.urlcheck.probe.name=London
 #com.codeaim.urlcheck.probe.isClustered=false
 #com.codeaim.urlcheck.probe.task.checkTask.electionSize=10
