Added data source configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,11 @@ spring.application.name="urlcheck-probe"
 #server.port=6661
 
 # DATABASE SETTINGS
-#spring.datasource.url=jdbc:postgresql://ec2-79-125-120-89.eu-west-1.compute.amazonaws.com:5432/dpfp2ijeagg0n?user=afkucyyyowfiry&password=HocNAZrn7uIlke0sx41ct3z09B&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+
+#spring.datasource.url=jdbc:postgresql://ec2-176-34-99-132.eu-west-1.compute.amazonaws.com:5432/d4n9rg4cmvhq25?user=nlgvvijoquprds&password=QPr4Mw4BWXzdlgdWrigAYb_R8X&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 
 # ACTUATOR SETTINGS
 
