--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,11 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-hateoas"
+    compile "org.springframework.boot:spring-boot-devtools"
     compile "com.h2database:h2"
     compile "org.postgresql:postgresql:9.4.1208"
-    compile "org.springframework.boot:spring-boot-devtools"
     compile "com.codeaim:url-check-common:0.0.16"
+    compile "com.google.guava:guava:19.0"
     compile "net.logstash.logback:logstash-logback-encoder:4.6"
+    compile "com.zaxxer:HikariCP:2.4.5"
 }
