--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,11 @@ spring.application.name="urlcheck-probe"
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
+#com.codeaim.urlcheck.probe.resultExistenceDuration=PT5M
+#spring.datasource.test-on-borrow=true
+#spring.datasource.validation-query=SELECT 1;
+#spring.datasource.validation-interval=30000
+#spring.profiles.active=production
 
 # ACTUATOR SETTINGS
 
